feat: rename registration to signup in ui context

--- a/apps/web/src/app/[locale]/about/en.mdx
+++ b/apps/web/src/app/[locale]/about/en.mdx
@@ -19,7 +19,7 @@ This is not a comprehensive list, but here are some highlights of the features c
 - A “wheel of fortune” that gives no reward — but at least it doesn’t ask for your email
 - Newsletter popups that appear when you scroll down and every time you switch tabs
 - Impossible-to-unsubscribe questions reminiscent of sites that make it difficult to unsubscribe
-- A super lengthy registration form with unexpected constraints and input methods
+- A super lengthy signup form with unexpected constraints and input methods
 - A confirmation prompt when you try to close the page
 - “DILF” ads — our version of the usual of the well known "bored middle-aged women" ads
 - A search page with absurd top searches and random slowdowns
