--- a/apps/web/src/i18n/messages/en.json
+++ b/apps/web/src/i18n/messages/en.json
@@ -5,7 +5,7 @@
     "recruiting": "Want to extend what you see here? Visit our <linkTag>GitHub</linkTag> repo to get started.",
     "aiDisclose": "AI text and image generation was used to produce contents of this website.",
     "copyright": "Copyright © {year} The Most Annoying Website",
-    "dataStorageDisclaimer": "We don't store any form data of: newsletter subscriptions, login, registration, password reminder.",
+    "dataStorageDisclaimer": "We don't store any form data of: newsletter subscriptions, login, signup, password reminder.",
     "cookieConsent": "This website uses cookies to ensure you get the best experience on our website. It's also a joke so many of the features are buggy or doens't even work on purpose. You can customize your experience and cookie settings in the settings menu.",
     "donate": {
       "description": "This is one feature that actually supposed to work. If you'd like to help support the project or the authors, you can donate here. Every donation helps. We appreciate your support!",
@@ -26,7 +26,7 @@
     "donate": "Donate",
     "login": "Login",
     "logout": "Logout",
-    "register": "Register",
+    "signup": "Signup",
     "passwordReminder": "Password Reminder",
     "profile": "Profile",
     "settings": "Settings",
@@ -84,9 +84,9 @@
       "title": "Password Reminder",
       "description": "Forgot your password? Don't worry! Use the Password Reminder feature here to quickly get back on track."
     },
-    "userRegistration": {
-      "title": "Registration",
-      "description": "Join our community today! Register here to unlock a world of exclusive content and personalized experiences."
+    "userSignup": {
+      "title": "Signup",
+      "description": "Join our community today! Signup here to unlock a world of exclusive content and personalized experiences."
     },
     "userProfile": {
       "title": "Profile",
@@ -203,10 +203,10 @@
   },
   "user": {
     "common": {
-      "registerAccount": "Need an account?",
+      "lookingForSignup": "Need an account? Signup here",
       "forgotPassword": "Forgot password?",
       "Login": "Login",
-      "register": "Register"
+      "signup": "Signup"
     },
     "field": {
       "consentNewsletter": "I want to receive newsletter",
@@ -229,8 +229,8 @@
         "genericError": "Login failed",
         "callToAction": "Login"
       },
-      "registration": {
-        "genericError": "Registration failed",
+      "signup": {
+        "genericError": "Signup failed",
         "callToAction": "Create my account"
       },
       "passwordReminder": {
@@ -294,7 +294,7 @@
     "mandatoryExperienceFlags": {
       "title": "Mandatory experience",
       "impossibleLogin": "Impossible login",
-      "impossibleRegistration": "Impossible registration",
+      "impossibleSignup": "Impossible signup",
       "impossiblePasswordReminder": "Impossible password reminder",
       "unreasonableContent": "Unreasonable content",
       "flaimYourPhone": "Flaim your phone"
