feat: making password creation field more accessible

--- a/apps/web/src/i18n/messages/en.json
+++ b/apps/web/src/i18n/messages/en.json
@@ -219,6 +219,7 @@
       "lastName": "Last name",
       "nickname": "Nickname",
       "password": "Password",
+      "passwordStrength": "Password strength",
       "passwordConfirmation": "Password confirmation",
       "phoneNumber": "Phone number",
       "rememberMe": "Remember me",
