--- a/apps/web/src/i18n/messages/en.json
+++ b/apps/web/src/i18n/messages/en.json
@@ -213,14 +213,22 @@
       "consentPrivacyPolicy": "Accept privacy policy",
       "countryCode": "Country",
       "dateOfBirth": "Date of birth",
+      "dateOfBirthYear": "Year",
+      "dateOfBirthMonth": "Month",
+      "dateOfBirthDay": "Day",
       "email": "Email",
       "firstName": "First name",
       "gender": "Gender",
       "lastName": "Last name",
       "nickname": "Nickname",
       "password": "Password",
+      "passwordStrength": "Password strength",
       "passwordConfirmation": "Password confirmation",
       "phoneNumber": "Phone number",
+      "phoneNumberCountryCode": "Country code",
+      "phoneNumberAreaCode": "Area code",
+      "phoneNumberDecrease": "Decrease phone number",
+      "phoneNumberIncrease": "Increase phone number",
       "rememberMe": "Remember me",
       "username": "Username"
     },
