chore(*): tweak labeler matchers

--- a/apps/web/src/app/[locale]/privacy-policy/en.mdx
+++ b/apps/web/src/app/[locale]/privacy-policy/en.mdx
@@ -4,7 +4,7 @@ This Policy describes the information we collect from you, how we use that infor
 
 ### Who we are
 
-The MAW is an open-source project that is publicly available through our [Git repository]({config.githubUrl}). If you have any questions about this privacy policy, please contact us at [{config.contactEmail}]({config.contactEmail}). We don't sell your personal data to anyone.
+The MAW is an open-source project that is publicly available through our <a href={config.githubUrl}>Git repository</a>. If you have any questions about this privacy policy, please contact us at <a href={`mailto:${config.contactEmail}`}>{config.contactEmail}</a>. We don't sell your personal data to anyone.
 
 ### What we collect
 
@@ -19,7 +19,7 @@ To provide you with the best possible experience on our website, we need to coll
 
 You have the right to be informed of Personal Data processed by The MAW and have the right to rectification/correction, erasure, and restriction of processing. You also have the right to ask us for a structured, common, and machine-readable format of Personal Data you provided to us. We can only identify you via your email address, and we can only adhere to your request and provide information if we have Personal Data about you through direct contact and/or your use of our site and/or services.
 
-To exercise any of the rights mentioned in this Privacy Policy and/or if you have questions or comments relating to the use of Personal Data, please contact us at [{config.contactEmail}]({config.contactEmail}). Additionally, you have the right to lodge a complaint with the data protection authority in your jurisdiction.
+To exercise any of the rights mentioned in this Privacy Policy and/or if you have questions or comments relating to the use of Personal Data, please contact us at <a href={`mailto:${config.contactEmail}`}>{config.contactEmail}</a>. Additionally, you have the right to lodge a complaint with the data protection authority in your jurisdiction.
 
 ### Third party services we use
 
@@ -43,7 +43,7 @@ We may update this Policy from time to time. If we do, we’ll let you know abou
 
 ### Contact Us
 
-If you have any questions about this Privacy Policy, please contact us at [{config.contactEmail}]({config.contactEmail}).
+If you have any questions about this Privacy Policy, please contact us at <a href={`mailto:${config.contactEmail}`}>{config.contactEmail}</a>.
 
 **Update 2024-10-29**: This update includes the necessary notice about embedded YouTube videos and its data-sharing implications, which should help ensure transparency and compliance with privacy laws.
 
