feat(donation): add lottie animation, donation balance, multiple methods

--- a/apps/web/src/i18n/messages/en.json
+++ b/apps/web/src/i18n/messages/en.json
@@ -8,7 +8,7 @@
     "dataStorageDisclaimer": "We don't store any form data of: newsletter subscriptions, login, signup, password reminder.",
     "cookieConsent": "This website uses cookies to ensure you get the best experience on our website. It's also a joke so many of the features are buggy or doens't even work on purpose. You can customize your experience and cookie settings in the settings menu.",
     "donate": {
-      "description": "This is one feature that actually supposed to work. If you'd like to help support the project or the authors, you can donate here. Every donation helps. We appreciate your support!",
+      "description": "This project doesn’t have any sponsor, sugardaddy, sugarmommy, crypto-whale investor, bored millionaire, or mysterious trench-coat philanthropist. It runs purely on volunteer work, server bills, and a steady stream of kebab + coffee expenses — all of which only dig the financial hole deeper. Still, this app remains a love project.\n\nIf you want to support our cause and help make this website even worse, any amount is HIGHLY appreciated. If you don’t have money to spare — honestly, who does in this economy? — you can still help by sharing this app and spreading the annoyance further.",
       "donateLinkText": "Donation info here"
     },
     "exitPrompt": "I'd reconsider leaving before some bad things happend to you. Are you sure?",
