feat(donation): add disclaimer, beggar bar and donation service

--- a/apps/web/src/i18n/messages/en.json
+++ b/apps/web/src/i18n/messages/en.json
@@ -8,8 +8,25 @@
     "dataStorageDisclaimer": "We don't store any form data of: newsletter subscriptions, login, signup, password reminder.",
     "cookieConsent": "This website uses cookies to ensure you get the best experience on our website. It's also a joke so many of the features are buggy or doens't even work on purpose. You can customize your experience and cookie settings in the settings menu.",
     "donate": {
-      "description": "This project doesn’t have any sponsor, sugardaddy, sugarmommy, crypto-whale investor, bored millionaire, or mysterious trench-coat philanthropist. It runs purely on volunteer work, server bills, and a steady stream of kebab + coffee expenses — all of which only dig the financial hole deeper. Still, this app remains a love project.\n\nIf you want to support our cause and help make this website even worse, any amount is HIGHLY appreciated. If you don’t have money to spare — honestly, who does in this economy? — you can still help by sharing this app and spreading the annoyance further.",
-      "donateLinkText": "Donation info here"
+      "description": "This project doesn't have any sponsor, sugardaddy, sugarmommy, crypto-whale investor, bored millionaire, or mysterious trench-coat philanthropist. It runs purely on volunteer work, server bills, and a steady stream of kebab + coffee expenses — all of which only dig the financial hole deeper. Still, this app remains a love project.\n\nIf you want to support our cause and help make this website even worse, any amount is HIGHLY appreciated. If you don't have money to spare — honestly, who does in this economy? — you can still help by sharing this app and spreading the annoyance further.",
+      "donateLinkText": "Donation info here",
+      "moneyUsageHeading": "What happens with the money?",
+      "moneyUsageDescription": "Your support helps compensate the time and effort I put into development, and it also contributes to covering infrastructure and tool costs (such as hosting, services, and development tools). Donations simply help keep the project alive and sustainable. Let's put money into the jar!",
+      "topSupporters": "Top supporters",
+      "topSupportersDescription": "Once this project actually starts getting donations, real people will appear here. So if you wish to be part of this list please contact me so that I can either manually upgrade this page or figure out some mechanism to do so.",
+      "topSupporterKidney": "🥇 Kidney",
+      "topSupporterLiver": "🥈 Liver",
+      "topSupporterHeart": "🥉 Heart",
+      "totalSupportReceived": "Total Support Received",
+      "classicMethods": "Classic methods",
+      "buyMeACoffee": "Buy Me A Coffee",
+      "payPal": "PayPay",
+      "cryptoMethods": "Crypto methods",
+      "alternativeOptionsLink": "Click here for other means of supporting 😏",
+      "disclaimer": "Disclaimer",
+      "disclaimerParagraph1": "This project is developed by a private individual based in Hungary. Any financial support or donation— including crypto—is voluntary, final, and does not grant you any rights, services, or special access. Donations are not tax-deductible.",
+      "disclaimerParagraph2": "No legal, tax, or financial advice is provided. If you have questions about donating or your own tax obligations, please consult a qualified professional in your jurisdiction.",
+      "disclaimerParagraph3": "I comply with applicable Hungarian tax laws for any funds received."
     },
     "exitPrompt": "I'd reconsider leaving before some bad things happend to you. Are you sure?",
     "readMoreAt": "Read more at",
@@ -18,6 +35,19 @@
       "description": "All experiences are disabled now. If you want share this page just for the content just pass this URL around. If you changed your mind, you can re-enable all experiences in the settings menu."
     },
     "toggleMenu": "Toggle menu"
+  },
+  "beggingBanner": {
+    "prefix": "🚨 Support Needed:",
+    "linkText": "Help us survive →",
+    "messages": {
+      "catJudging": "My imaginary cat is judging me. She knows I can't afford the fancy treats anymore. Help me restore my dignity (and her opinion of me).",
+      "rentDue": "The rent is due. My landlord thinks I'm \"creative\" with payment schedules. Last month I paid in interpretive dance. I need actual money now.",
+      "codeTherapy": "My code needs therapy. It's held together by duct tape, prayers, and Stack Overflow answers from 2012. Help me pay for AI agents.",
+      "futureSelf": "Past me made commitments that current me can't afford. Future me is going to be very disappointed. Help me lie to myself more convincingly.",
+      "pretendSuccessful": "Just for one day, I want to buy something without checking my bank balance first. Your donation makes dreams come true. Sad, materialistic dreams.",
+      "validationNeeded": "My therapist says I seek external validation too much. But what does she know? She's not the one staring at zero donations. Prove her wrong.",
+      "ramenUpgrade": "I want to upgrade my ramen. From \"3 for €5\" to \"fancy instant with vegetable packet included.\" It's a modest dream. A noodle-based dream."
+    }
   },
   "navigation": {
     "home": "Home",
