chore(design): sync docs to match new system

--- a/packages/ui-lib/src/docs/Typography.mdx
+++ b/packages/ui-lib/src/docs/Typography.mdx
@@ -33,19 +33,19 @@
   <p>There are a few border colors defined based on what background they are on.</p>
   <ul className="!list-none !p-0">
     <li className="p-5 bg-surface">
-      <div className="border-b border-hr-surface text-on-surface">.border-hr-surface</div>
+      <div className="border-b border-border-surface text-on-surface">.border-border-surface</div>
     </li>
     <li className="p-5 bg-surface-alt">
-      <div className="border-b border-hr-surface-alt text-on-surface">.border-hr-surface-alt</div>
+      <div className="border-b border-border-surface-alt text-on-surface">.border-border-surface-alt</div>
     </li>
     <li className="p-5 bg-primary">
-      <div className="border-b border-hr-primary text-on-primary">.border-hr-primary</div>
+      <div className="border-b border-border-primary text-on-primary">.border-border-primary</div>
     </li>
     <li className="p-5 bg-secondary">
-      <div className="border-b border-hr-secondary text-on-secondary">.border-hr-secondary</div>
+      <div className="border-b border-border-secondary text-on-secondary">.border-border-secondary</div>
     </li>
     <li className="p-5 bg-tertiary">
-      <div className="border-b border-hr-tertiary text-on-tertiary">.border-hr-tertiary</div>
+      <div className="border-b border-border-tertiary text-on-tertiary">.border-border-tertiary</div>
     </li>
   </ul>
 </div>
