feat(design): layer display tweaks for header and home to cover required changes for donation

--- a/apps/web/src/i18n/messages/en.json
+++ b/apps/web/src/i18n/messages/en.json
@@ -8,7 +8,7 @@
     "dataStorageDisclaimer": "We don't store any form data of: newsletter subscriptions, login, signup, password reminder.",
     "cookieConsent": "This website uses cookies to ensure you get the best experience on our website. It's also a joke so many of the features are buggy or doens't even work on purpose. You can customize your experience and cookie settings in the settings menu.",
     "donate": {
-      "description": "This project doesn't have any sponsor, sugardaddy, sugarmommy, crypto-whale investor, bored millionaire, or mysterious trench-coat philanthropist. It runs purely on volunteer work, server bills, and a steady stream of kebab + coffee expenses — all of which only dig the financial hole deeper. Still, this app remains a love project.\n\nIf you want to support our cause and help make this website even worse, any amount is HIGHLY appreciated. If you don't have money to spare — honestly, who does in this economy? — you can still help by sharing this app and spreading the annoyance further.",
+      "description": "This project doesn't have any sponsor, sugardaddy, sugarmommy, crypto-whale investor, bored millionaire, or mysterious trench-coat philanthropist. It runs purely on volunteer work, server bills, and a steady stream of kebab + coffee expenses — all of which only dig the financial hole deeper. Still, this app remains a love project.<br></br><br></br>If you want to support our cause and help make this website even worse, any amount is HIGHLY appreciated. If you don't have money to spare — honestly, who does in this economy? — you can still help by sharing this app and spreading the annoyance further.",
       "donateLinkText": "Donation info here",
       "moneyUsageHeading": "What happens with the money?",
       "moneyUsageDescription": "Your support helps compensate the time and effort I put into development, and it also contributes to covering infrastructure and tool costs (such as hosting, services, and development tools). Donations simply help keep the project alive and sustainable. Let's put money into the jar!",
@@ -24,9 +24,7 @@
       "cryptoMethods": "Crypto methods",
       "alternativeOptionsLink": "Click here for other means of supporting 😏",
       "disclaimer": "Disclaimer",
-      "disclaimerParagraph1": "This project is developed by a private individual based in Hungary. Any financial support or donation— including crypto—is voluntary, final, and does not grant you any rights, services, or special access. Donations are not tax-deductible.",
-      "disclaimerParagraph2": "No legal, tax, or financial advice is provided. If you have questions about donating or your own tax obligations, please consult a qualified professional in your jurisdiction.",
-      "disclaimerParagraph3": "I comply with applicable Hungarian tax laws for any funds received."
+      "disclaimerDetails": "This project is developed by a private individual based in Hungary. Any financial support or donation— including crypto—is voluntary, final, and does not grant you any rights, services, or special access. Donations are not tax-deductible.<br></br><br></br>No legal, tax, or financial advice is provided. If you have questions about donating or your own tax obligations, please consult a qualified professional in your jurisdiction.<br></br><br></br>I comply with applicable Hungarian tax laws for any funds received."
     },
     "exitPrompt": "I'd reconsider leaving before some bad things happend to you. Are you sure?",
     "readMoreAt": "Read more at",
