feat(e2e): fixed up e2e test suite to add admin test suite

--- a/apps/web/src/i18n/messages/en.json
+++ b/apps/web/src/i18n/messages/en.json
@@ -205,7 +205,7 @@
         "maxLength": "Maximum length is {count} characters",
         "min": "Value must be at least {count}",
         "max": "Value must be no more than {count}",
-        "emailInvalid": "Invalid email address",
+        "emailInvalid": "Valid email address is required",
         "captchaRequired": "Captcha is required",
         "captchaInvalid": "Invalid captcha",
         "patternMismatch": "The input does not match the required pattern",
